k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: house-price-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: house-price-api
  template:
    metadata:
      labels:
        app: house-price-api
    spec:
      containers:
        - name: api
          image: mlops-house-price-api:local
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
