k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: house-price-api-service
spec:
  selector:
    app: house-price-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
