k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: house-price-api-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: house-price.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: house-price-api-service
                port:
                  number: 8000
